--- a/Doktori/src/main/webapp/css/style.css
+++ b/Doktori/src/main/webapp/css/style.css
@@ -1,15 +1,19 @@
 @charset "utf-8";
 
+/* Main page CSS */
 .blind {position: absolute; width: 1px; height: 1px; clip: rect(0 0 0 0); overflow: hidden;}
 .main_wrap {width: 100%;}
 .container {margin: 0 auto;}
 .header {position: relative; padding: 40px 30px 0; background: url(../images/visual_img.jpg) no-repeat 50% 50%; background-size: cover;}
+.sub_wrap .header {background: none;}
 .header .title {text-align: center; color: #ffffff;}
 .header .log_list {position: absolute; top: 56px; right: 45px;}
 .header .log_list:after {content: ''; display: block; clear: both;}
 .header .log_list .log_list__item {float: left; margin: 0 10px;}
 .header .log_list .log_list__item a {color: #ffffff;}
+.sub_wrap .header .log_list .log_list__item a {color: #000000;}
 .main_visual {padding:150px 0 200px; text-align: center;}
+
 .main_visual .nav_list {display: inline-block;}
 .main_visual .nav_list:after {content: ''; display: block; clear: both;}
 .main_visual .nav_list .nav_list__item {position: relative; float: left; margin: 0 15px;}
@@ -31,8 +35,21 @@
 .notice_area .notice_list .notice_list__item {position: relative; margin: 10px 0;}
 .notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../images/star.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
 
+/* Subheader CSS */
+.sub_wrap .header .title {color:#000000}
+.sub_wrap .main_visual {padding:100px 0 100px;}
+.sub_wrap .main_visual .nav_list .nav_list__item a {color: #000000;}
+
+/* Footer CSS */
 .footer {padding-bottom: 30px;}
 .footer .inner {width: 1400px; border-top: 2px solid #000000;}
 .footer_list {margin-top: 50px;}
 .footer_list__item {margin: 8px 0;}
 .footer_list__item--bold {font-weight: bold;}
+
+/* Faq Css */
+.faqArea {width: 100%; max-width: 1000px; margin: 0 auto; border-top: 2px solid #000000; padding-bottom: 30px;}
+.faqArea .faq_content {display: none;}
+.faqArea .faq_list__item {border-bottom: 1px solid #ddd; cursor: pointer;}
+.faqArea .faq_title {padding: 20px 0;}
+.faqArea .faq_content {border-top: 1px dashed #ddd; padding: 20px 0; overflow: hidden;}
