--- a/Doktori/src/main/webapp/css/style.css
+++ b/Doktori/src/main/webapp/css/style.css
@@ -18,8 +18,9 @@
 .main_visual .nav_list .nav_list__item:after {content: ''; display: block; position: absolute; width: 1px; height: 20px; top: 0; right: -15px; background: #ffffff;} 
 .main_visual .nav_list .nav_list__item:last-child:after {display: none;}
 .main_visual .nav_list .nav_list__item a {font-size: 18px; color: #ffffff; text-decoration: underline;}
-.main_visual .nav_list .list_wrap {display: none;}
-.main_visual .nav_list .item_list {position: absolute; display: flex; justify-content:space-between; width: 250px; bottom: -55px; left: 50%; transform: translateX(-50%); border: 1px solid #000000; }
+.main_visual .nav_list .list_wrap {display: none; position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%);}
+.main_visual .nav_list .nav_list__item--hasSub:hover .list_wrap {display: block; z-index: 1;}
+.main_visual .nav_list .item_list {display: flex; justify-content:space-between; width: 250px; padding: 5px;}
 .main_visual .nav_list .item_list__item {padding: 10px;}
 .main_visual .nav_list .item_list__item a {text-decoration: none;}
 .main_visual .form_area {position: relative; width: 330px; margin: 200px auto 0;}
