--- a/Doktori/src/main/webapp/Css/style.css
+++ b/Doktori/src/main/webapp/Css/style.css
@@ -4,7 +4,7 @@
 .blind {position: absolute; width: 1px; height: 1px; clip: rect(0 0 0 0); overflow: hidden;}
 .main_wrap {width: 100%;}
 .container {margin: 0 auto;}
-.header {position: relative; padding: 40px 30px 0; background: url(../images/visual_img.jpg) no-repeat 50% 50%; background-size: cover;}
+.header {position: relative; padding: 40px 30px 0; background: url(../Images/visual_img.jpg) no-repeat 50% 50%; background-size: cover;}
 .sub_wrap .header {background: none;}
 .header .title {text-align: center; color: #ffffff;}
 .header .log_list {position: absolute; top: 56px; right: 45px;}
@@ -25,7 +25,7 @@
 .main_visual .nav_list .item_list__item a {text-decoration: none;}
 .main_visual .form_area {position: relative; width: 330px; margin: 200px auto 0;}
 .main_visual .form_area .search_area {width: 100%; padding-left: 30px; border-radius: 15px;}
-.main_visual .form_area .search_button {position: absolute; display: block; padding: 0; width: 27px; height: 22px; background: url(../images/search.png) no-repeat 50% 0; border: 0 none; top: 2px; left: 0; cursor: pointer; background-size: contain;}
+.main_visual .form_area .search_button {position: absolute; display: block; padding: 0; width: 27px; height: 22px; background: url(../Images/search.png) no-repeat 50% 0; border: 0 none; top: 2px; left: 0; cursor: pointer; background-size: contain;}
 
 .inner {width: 100%; max-width: 1600px; margin: 0 auto;}
 .slide_wrap {position: relative; width: 100%; margin-top: 80px; padding-bottom: 80px;}
@@ -36,7 +36,7 @@
 .info_wrap {padding-bottom: 100px;}
 .notice_area {display: flex; width: 100%; max-width: 1000px; justify-content:space-between; margin: 0 auto;}
 .notice_area .notice_list .notice_list__item {position: relative; margin: 10px 0;}
-.notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../images/star.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
+.notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../Images/star.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
 
 /* Subheader CSS */
 .sub_wrap .header .title {color:#000000}
@@ -51,9 +51,22 @@
 .footer_list__item {margin: 8px 0;}
 .footer_list__item--bold {font-weight: bold;}
 
-/* Faq Css */
+/* Faq CSS */
 .faqArea {width: 100%; max-width: 1000px; margin: 0 auto; border-top: 2px solid #000000; padding-bottom: 30px;}
-.faqArea .faq_content {display: none;}
+.faqArea .faq_content {display: none; border-top: 1px dashed #ddd; padding: 20px 0; overflow: hidden;}
 .faqArea .faq_list__item {border-bottom: 1px solid #ddd; cursor: pointer;}
 .faqArea .faq_title {padding: 20px 0;}
-.faqArea .faq_content {border-top: 1px dashed #ddd; padding: 20px 0; overflow: hidden;}
+
+/* Mypage CSS */
+.mypageArea {width: 100%; max-width: 1000px; margin: 0 auto; padding: 20px 0 30px 0; border-top: 2px solid #000000;}
+.mypageArea:after {content: ''; display: block; clear: both;}
+.mypageArea .list_area {float: left; width: 30%;}
+.mypageArea .list_area .my_list__item {text-align: center; padding: 20px 0;}
+.mypageArea .info_area {position: relative; float: left; width: 70%;}
+.mypageArea .info_area .txt {display: block; margin-bottom: 30px;}
+.mypageArea .info_area:afet {content: ''; display: block; clear: both;}
+.mypageArea .info_area .edit_button {position: absolute; top: 0; right: 0; margin: 10px 10px 0 0;}
+.mypageArea .info_area .my_img {float:left; width: 30%; height: 200px;}
+.mypageArea .info_area .my_img img {object-fit: cover; height: 100%;}
+.mypageArea .info_area .my_info {float: left; width: calc(70% - 60px); padding: 20px 30px;}
+.mypageArea .info_area .my_info label {display: block; margin: 20px 0;}
