--- a/Doktori/src/main/webapp/Css/reset.css
+++ b/Doktori/src/main/webapp/Css/reset.css
@@ -1,71 +1,16 @@
 @charset "utf-8";
+html, body{width:100%; height:100%; min-height:100%;}
 
-html, body {
-	width: 100%;
-	height: 100%;
-	min-height: 100%;
-}
-
-body, ol, ul, li, dl, dt, dd, blockquote, fieldset, h1, h2, h3, h4, h4,
-	h5, h6, pre, form, textarea, p, div {
-	margin: 0;
-	padding: 0;
-}
-
-address, caption, cite, code, dfn, em, strong, var {
-	font-style: normal;
-	font-weight: normal;
-}
-
-b, strong {
-	font-weight: bold;
-}
-
-a {
-	color: #666;
-	border: 0;
-	text-decoration: none;
-}
-
-ol, ul {
-	list-style-type: none;
-}
-
-hr {
-	display: none;
-}
-
-li, img {
-	border: 0;
-	vertical-align: top;
-	line-height: 1;
-}
-
-img {
-	width: 100%;
-}
-
-fieldset {
-	border: 0;
-	display: block;
-}
-
-legend {
-	margin-left: -7px;
-	position: absolute;
-	visibility: hidden;
-}
-
-table {
-	table-layout: fixed;
-	border-collapse: collapse;
-}
-
-caption {
-	display: none;
-}
-
-input {
-	font: normal normal 12px/1.5 dotum, gulim, arial;
-	color: #666;
-}
+body, ol, ul, li, dl, dt, dd, blockquote, fieldset, h1, h2, h3, h4, h4, h5, h6, pre, form, textarea, p, div{margin:0; padding:0;}
+address, caption, cite, code, dfn, em, strong, var{font-style:normal; font-weight:normal;}
+b, strong{font-weight:bold;}
+a{color:#666; border:0; text-decoration:none;}
+ol, ul{list-style-type:none;}
+hr{display:none;}
+li, img{border:0; vertical-align:top; line-height:1;}
+img{width: 100%;}
+fieldset{border:0; display:block;}
+legend{margin-left:-7px; position:absolute; visibility:hidden;}
+table{table-layout:fixed; border-collapse:collapse;}
+caption{display:none;}
+input{font:normal normal 12px/1.5 dotum, gulim, arial; color:#666;}
