--- a/Doktori/src/main/webapp/Css/style.css
+++ b/Doktori/src/main/webapp/Css/style.css
@@ -52,10 +52,11 @@
 .footer_list__item--bold {font-weight: bold;}
 
 /* Faq CSS */
-.faqArea {width: 100%; max-width: 1000px; margin: 0 auto; border-top: 2px solid #000000; padding-bottom: 30px;}
+.faqArea {position:relative; width: 100%; max-width: 1000px; margin: 0 auto; border-top: 2px solid #000000; padding-bottom: 45px; margin-bottom: 25px;}
 .faqArea .faq_content {display: none; border-top: 1px dashed #ddd; padding: 20px 0; overflow: hidden;}
 .faqArea .faq_list__item {border-bottom: 1px solid #ddd; cursor: pointer;}
 .faqArea .faq_title {padding: 20px 0;}
+.faqArea .write_button {position: absolute; bottom: 0; right: 0;}
 
 /* Mypage CSS */
 .mypageArea {width: 100%; max-width: 1000px; margin: 0 auto; padding: 20px 0 30px 0; border-top: 2px solid #000000;}
