--- a/Doktori/src/main/webapp/Css/style.css
+++ b/Doktori/src/main/webapp/Css/style.css
@@ -36,7 +36,7 @@
 .info_wrap {padding-bottom: 100px;}
 .notice_area {display: flex; width: 100%; max-width: 1000px; justify-content:space-between; margin: 0 auto;}
 .notice_area .notice_list .notice_list__item {position: relative; margin: 10px 0;}
-.notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../Images/star.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
+.notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../Images/dotori.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
 
 /* Subheader CSS */
 .sub_wrap .header .title {color:#000000}
