--- a/Doktori/src/main/webapp/Css/style.css
+++ b/Doktori/src/main/webapp/Css/style.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+a {text-decoration: none;}
+a:hover {text-decoration: none;}
+.default_btn {background: #825e24; font-weight: bold; color: #fff; border: 0 none; border-radius: 4px; padding: 2px 6px;}
+.default_btn:hover {background: #b09468}
+
 /* Main page CSS */
 .blind {position: absolute; width: 1px; height: 1px; clip: rect(0 0 0 0); overflow: hidden;}
 .main_wrap {width: 100%;}
@@ -11,27 +16,27 @@
 .header .log_list:after {content: ''; display: block; clear: both;}
 .header .log_list .log_list__item {float: left; margin: 0 10px;}
 .header .log_list .log_list__item a {color: #ffffff;}
-.main_visual {padding:150px 0 200px; text-align: center;}
+.main_visual {padding:120px 0 200px; text-align: center;}
 .main_visual .nav_list {display: inline-block;}
 .main_visual .nav_list:after {content: ''; display: block; clear: both;}
 .main_visual .nav_list .nav_list__item {position: relative; float: left; margin: 0 15px;}
 .main_visual .nav_list .nav_list__item:after {content: ''; display: block; position: absolute; width: 1px; height: 20px; top: 0; right: -15px; background: #ffffff;} 
 .main_visual .nav_list .nav_list__item:last-child:after {display: none;}
-.main_visual .nav_list .nav_list__item a {font-size: 18px; color: #ffffff; text-decoration: underline;}
-.main_visual .nav_list .list_wrap {display: none; position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%);}
+.main_visual .nav_list .nav_list__item a {font-size: 20px; color: #ffffff;}
+.main_visual .nav_list .list_wrap {display: none; position: absolute; bottom: -47px; left: 50%; transform: translateX(-50%);}
 .main_visual .nav_list .nav_list__item--hasSub:hover .list_wrap {display: block; z-index: 1;}
-.main_visual .nav_list .item_list {display: flex; justify-content:space-between; width: 250px; padding: 5px;}
+.main_visual .nav_list .item_list {display: flex; justify-content:space-between; width: 265px; padding: 5px;}
 .main_visual .nav_list .item_list__item {padding: 10px;}
 .main_visual .nav_list .item_list__item a {text-decoration: none;}
-.main_visual .form_area {position: relative; width: 330px; margin: 200px auto 0;}
-.main_visual .form_area .search_area {width: 100%; padding-left: 30px; border-radius: 15px;}
-.main_visual .form_area .search_button {position: absolute; display: block; padding: 0; width: 27px; height: 22px; background: url(../Images/search.png) no-repeat 50% 0; border: 0 none; top: 2px; left: 0; cursor: pointer; background-size: contain;}
+.main_visual .form_area {position: relative; width: 400px; margin: 200px auto 0;}
+.main_visual .form_area .search_area {width: 100%; padding-left: 11px; border-radius: 15px; font-size: 20px;}
+.main_visual .form_area .search_button {position: absolute; display: block; padding: 0; width: 28px; height: 26px; background: url(../Images/search.png) no-repeat 50% 0; border: 0 none; top: 4px; right: 6px; cursor: pointer; background-size: contain;}
 
 .inner {width: 100%; max-width: 1600px; margin: 0 auto;}
 .slide_wrap {position: relative; width: 100%; margin-top: 80px; padding-bottom: 80px;}
 .slide_title {text-align: center; margin-bottom: 30px;}
+.slide_wrap {height: 400px;}
 .swiper {width: 80%; margin: 0 auto;}
-.swiper .swiper-slide {width: 450px;}
 
 .info_wrap {padding-bottom: 100px;}
 .notice_area {display: flex; width: 100%; max-width: 1000px; justify-content:space-between; margin: 0 auto;}
@@ -72,3 +77,8 @@
 .mypageArea .info_area .my_info {float: left; width: calc(70% - 60px); padding: 20px 30px;}
 .mypageArea .info_area .my_info label {display: block; margin: 20px 0;}
 
+
+
+.login {padding-bottom: 100px;}
+.login form {width: 320px; text-align: left;}
+.login label {display: inline-block; margin: 7px 0;}
