--- a/Doktori/src/main/webapp/Css/style.css
+++ b/Doktori/src/main/webapp/Css/style.css
@@ -4,6 +4,7 @@ a {text-decoration: none;}
 a:hover {text-decoration: none;}
 .default_btn {background: #825e24; font-weight: bold; color: #fff; border: 0 none; border-radius: 4px; padding: 2px 6px;}
 .default_btn:hover {background: #b09468}
+.nonebg_btn {background: none; border: 0 none; cursor: pointer; color: #666; font-size: 12px; padding: 0;}
 
 /* Main page CSS */
 .blind {position: absolute; width: 1px; height: 1px; clip: rect(0 0 0 0); overflow: hidden;}
@@ -40,6 +41,7 @@ a:hover {text-decoration: none;}
 
 .info_wrap {padding-bottom: 100px;}
 .notice_area {display: flex; width: 100%; max-width: 1000px; justify-content:space-between; margin: 0 auto;}
+.notice_area .notice_list {width: 250px;}
 .notice_area .notice_list .notice_list__item {position: relative; margin: 10px 0;}
 .notice_area .notice_list .notice_list__item--first:after {position: absolute; content: ''; display: block; width: 20px; height: 20px; background: url(../Images/dotori.png) no-repeat 50% 0; background-size: cover; top: -2px; left: -23px;}
 
@@ -52,7 +54,7 @@ a:hover {text-decoration: none;}
 /* Footer CSS */
 .footer {padding-bottom: 30px;}
 .footer .inner {width: 1400px; border-top: 2px solid #000000;}
-.footer_list {margin-top: 50px;}
+.footer_list {margin-top: 30px; font-size: 14px;}
 .footer_list__item {margin: 8px 0;}
 .footer_list__item--bold {font-weight: bold;}
 
@@ -67,14 +69,14 @@ a:hover {text-decoration: none;}
 .mypageArea {width: 100%; max-width: 1000px; margin: 0 auto; padding: 20px 0 30px 0; border-top: 2px solid #000000;}
 .mypageArea:after {content: ''; display: block; clear: both;}
 .mypageArea .list_area {float: left; width: 30%;}
-.mypageArea .list_area .my_list__item {text-align: center; padding: 20px 0;}
+.mypageArea .list_area .my_list__item {text-align: center; padding: 20px 0; font-weight: bold;}
 .mypageArea .info_area {position: relative; float: left; width: 70%;}
-.mypageArea .info_area .txt {display: block; margin-bottom: 30px;}
+.mypageArea .info_area .txt {display: block; margin: 30px 0;}
 .mypageArea .info_area:afet {content: ''; display: block; clear: both;}
 .mypageArea .info_area .edit_button {position: absolute; top: 0; right: 0; margin: 10px 10px 0 0;}
-.mypageArea .info_area .my_img {float:left; width: 30%; height: 200px;}
+.mypageArea .info_area .my_img {float:left; width: 20%; height: 200px; overflow: hidden;}
 .mypageArea .info_area .my_img img {object-fit: cover; height: 100%;}
-.mypageArea .info_area .my_info {float: left; width: calc(70% - 60px); padding: 20px 30px;}
+.mypageArea .info_area .my_info {float: left; width: calc(70% - 60px); padding: 20px 30px; margin-left: 45px;}
 .mypageArea .info_area .my_info label {display: block; margin: 20px 0;}
 
 
@@ -82,3 +84,9 @@ a:hover {text-decoration: none;}
 .login {padding-bottom: 100px;}
 .login form {width: 320px; text-align: left;}
 .login label {display: inline-block; margin: 7px 0;}
+
+.bookList {width: 1400px; margin: 0 auto;}
+.bookList img {width: 100%; height: auto;}
+.bookList .resultList {position: relative;}
+.bookList .resultList .stateArea {position: absolute; bottom: 15px; right: 0;}
+.bookList .resultList .stateArea form {display: inline-block;}
